--- a/estilos/style.css
+++ b/estilos/style.css
@@ -116,6 +116,9 @@ main {
     
     padding: 5px;
     height: 100%;
+} 
+main > article {
+    padding-bottom: 25px;
 }
 main > article  h2 {
     text-align: center;
@@ -217,45 +220,6 @@ main > article h2:hover {
     background-color: #4aaec0;
     font-weight: bold;
 }
-
-
-
-main > aside {
-    background-color: #00a1bec5;
-    text-align: center;
-    padding-bottom: 9px;
-    border-radius: 10px;
-}
-main > aside > h3 {
-    margin-bottom: 10px;
-    color: white;
-    padding-top: 7px;
-}
-main > aside > label {
-    color: white;
-    font-weight: bold;
-    font-size: 1.1em;
-}
-main > aside > input {
-    width: 60vw;
-    text-indent: 14px;
-    margin-left: 4px;
-    position: relative;
-    padding: 9px 0;
-    border-radius: 10px;
-    border: 1px solid #00A2BE;
-}
-main > aside > input:focus {
-    box-shadow: 0 0 0 0;
-    outline: 0;
-    border: 1px solid rgba(0, 0, 0, 0.753);
-}
-main > aside > input::placeholder {
-    color:#0d3e47cb;
-}
-
-
-
 
 footer {
     text-align: center;
