--- a/estilos/media.css
+++ b/estilos/media.css
@@ -90,13 +90,12 @@
      header > .header-form0 > input {
         margin-top: 10px;
         text-indent: 10px;
-        width: 25vw;
+        width: 50vw;
         padding: 7px 0;
         border-radius: 10px;
-        border: none;
+        border: 1px solid transparent;
      }
      header > .header-form0 > input:focus {
-        width: 45vw;
         border: 1px solid #00A2BE;
     }
     nav {
